version/0.15/_sources/api/ansys/dpf/core/operators/filter/scoping_high_pass/InputsScopingHighPass.rst.txt






:class:`InputsScopingHighPass`
==============================


.. py:class:: ansys.dpf.core.operators.filter.scoping_high_pass.InputsScopingHighPass(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   scoping_high_pass operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.filter.scoping_high_pass()
   >>> my_field = dpf.Field()
   >>> op.inputs.field.connect(my_field)
   >>> my_threshold = float()
   >>> op.inputs.threshold.connect(my_threshold)
   >>> my_both = bool()
   >>> op.inputs.both.connect(my_both)






.. py:currentmodule:: InputsScopingHighPass

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~field`
            - Allows to connect field input to the operator.
          * - :py:attr:`~threshold`
            - Allows to connect threshold input to the operator.
          * - :py:attr:`~both`
            - Allows to connect both input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.filter.scoping_high_pass import InputsScopingHighPass

Property detail
---------------

.. py:property:: field
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.field.Field | ansys.dpf.core.fields_container.FieldsContainer]


   Allows to connect field input to the operator.

   field or fields container with only one field is expected

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.filter.scoping_high_pass()
   >>> op.inputs.field.connect(my_field)
   >>> # or
   >>> op.inputs.field(my_field)

.. py:property:: threshold
   :type: ansys.dpf.core.inputs.Input[float | ansys.dpf.core.field.Field]


   Allows to connect threshold input to the operator.

   A threshold scalar or a field containing one value is expected.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.filter.scoping_high_pass()
   >>> op.inputs.threshold.connect(my_threshold)
   >>> # or
   >>> op.inputs.threshold(my_threshold)

.. py:property:: both
   :type: ansys.dpf.core.inputs.Input[bool]


   Allows to connect both input to the operator.

   The default is false. If set to true, the complement of the filtered fields container is returned on output pin 1.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.filter.scoping_high_pass()
   >>> op.inputs.both.connect(my_both)
   >>> # or
   >>> op.inputs.both(my_both)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




